# crogl_mini_llm_chat_web

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_GUIDE.md  CLOUD_RUN_DEPLOYMENT_GUIDE.md  CODE_WALKTHROUGH.md  CONTAINERIZATION_SUMMARY.md  Dockerfile  GOOGLE_OAUTH_SETUP_GUIDE.md  INSTALLATION_GUIDE.md  OAUTH_SETUP_CHECKLIST.md  README.md  README_WEB_INTERFACE.md  TESTING_SUITE_WALKTHROUGH.md  USAGE_GUIDE.md  alembic.ini  cloudbuild.yaml  deploy.sh  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_database.py  test-docker.sh
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/Auth/: AuthGuard.js  LoginForm.js
frontend/src/components/Chat/: ChatContainer.js  Message.js  MessageInput.js  MessageList.js
frontend/src/components/Common/: Button.js  Input.js  Loading.js
frontend/src/components/Layout/: Header.js  Sidebar.js
frontend/src/hooks/: useAuth.js
frontend/src/services/: api.js  authService.js  chatService.js
frontend/src/styles/: components.css  globals.css
migrations/: env.py
mini_llm_chat/: __init__.py  __main__.py  auth.py  auth_service.py  cache.py  chat.py  cli.py  database.py  database_manager.py  logging_hygiene.py  rate_limiter.py  web.py
mini_llm_chat/backends/: __init__.py  base.py  memory.py  postgresql.py
mini_llm_chat/tests/: test_auth.py  test_backends.py  test_cache.py  test_chat.py  test_cli.py  test_database.py  test_database_manager.py  test_logging_hygiene.py  test_rate_limiter.py
mini_llm_chat/utils/: __init__.py  postgresql_utils.py
mini_llm_chat/web_api/: __init__.py  dependencies.py  exceptions.py
mini_llm_chat/web_api/routes/: __init__.py  auth.py  chat.py  users.py
mini_llm_chat/web_api/websocket/: __init__.py  chat_handler.py
